clean up sidebar links alignment, overflow issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -41,19 +41,32 @@
   height: 100vh;
   background-color: #f1f4f9;
   transition: width 0.3s;
-  overflow-y: auto;
-  overflow-x: hidden;
   &.collapsed {
-    width: 0;
+    width: 46px;
+    .sidebar .links .text {
+      opacity: 0;
+    }
   }
 }
 .sidebar {
   width: 250px;
-  padding: 12px;
+  height: 100vh;
+  overflow-y: auto;
   padding-top: 36px;
   .links {
     a {
-      display: block;
+      padding: 3px 12px;
+      text-decoration: none;
+      &:active, &:link, &:visited {
+        text-decoration: none;
+      }
+      &:hover {
+        text-decoration: none;
+      }
+      .text {
+        transition: opacity 0.3s;
+        margin-left: 6px;
+      }
     }
   }
 }
